[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/Player/Zombie/Poses/head_focus.png" type="Texture" id=2]
[ext_resource path="res://assets/Player/AlienBlue/alienBlue_badge1.png" type="Texture" id=3]
[ext_resource path="res://assets/Player/AlienYellow/alienYellow_badge1.png" type="Texture" id=4]
[ext_resource path="res://assets/Player/AlienGreen/alienGreen_badge1.png" type="Texture" id=5]
[ext_resource path="res://scripts/StartScreen.gd" type="Script" id=6]
[ext_resource path="res://assets/Icons/vibrating-smartphone.png" type="Texture" id=7]
[ext_resource path="res://assets/StartScreenButton.tres" type="StyleBox" id=8]
[ext_resource path="res://assets/Icons/sideswipe.png" type="Texture" id=9]
[ext_resource path="res://assets/Icons/speaker.png" type="Texture" id=10]
[ext_resource path="res://assets/Icons/cog.png" type="Texture" id=11]
[ext_resource path="res://assets/Player/AlienPink/alienPink_badge1.png" type="Texture" id=12]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFontData" id=6]
font_path = "res://assets/Fonts/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=7]
size = 100
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/Fonts/kenvector_future.ttf"

[sub_resource type="DynamicFont" id=9]
size = 100
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 8 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="Animation" id=12]
resource_name = "drawer_shown"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 120, -0.25, 0, 0.25, 0, 1020, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 120, -0.25, 0, 0.25, 0, 120, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:rect_position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 910, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:rect_position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 710, -0.25, 0, 0.25, 0, 710, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFontData" id=15]
font_path = "res://assets/Fonts/kenpixel.ttf"

[sub_resource type="DynamicFont" id=16]
size = 75
font_data = SubResource( 15 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="BtnStart" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
text = "Start"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="."]
margin_right = 1080.0
margin_bottom = 693.0
custom_fonts/font = SubResource( 9 )
text = "Best score
 0"
align = 1
valign = 1

[node name="BtnCharacterSelection" type="Button" parent="."]
margin_left = 900.0
margin_top = 500.0
margin_right = 1040.0
margin_bottom = 640.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
toggle_mode = true
icon = ExtResource( 12 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupPanel" type="PopupPanel" parent="."]
margin_left = -1.0
margin_top = 499.0
margin_right = 1080.0
margin_bottom = 1199.0
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PopupPanel"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1071.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 690.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="PopupPanel/CenterContainer"]
margin_left = 180.0
margin_top = 340.0
margin_right = 880.0
margin_bottom = 340.0
rect_min_size = Vector2( 700, 0 )
custom_styles/bg_focus = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
items = [ "", ExtResource( 12 ), false, "", ExtResource( 3 ), false, "", ExtResource( 5 ), false, "", ExtResource( 4 ), false, "", ExtResource( 2 ), false ]
allow_reselect = true
auto_height = true
max_columns = 3
fixed_column_width = 200
icon_mode = 0
fixed_icon_size = Vector2( 140, 140 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_right = 1080.0
margin_bottom = 346.0
size_flags_vertical = 3
alignment = 1

[node name="TextureButton" type="TextureButton" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_right = 357.0
margin_bottom = 346.0
size_flags_horizontal = 3
texture_normal = ExtResource( 12 )
stretch_mode = 5

[node name="TextureButton2" type="TextureButton" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_left = 361.0
margin_right = 718.0
margin_bottom = 346.0
size_flags_horizontal = 3
texture_normal = ExtResource( 3 )

[node name="TextureButton3" type="TextureButton" parent="PopupPanel/VBoxContainer/HBoxContainer"]
margin_left = 722.0
margin_right = 1080.0
margin_bottom = 346.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 350.0
margin_right = 1080.0
margin_bottom = 696.0
size_flags_vertical = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
margin_top = 700.0
margin_right = 1080.0
margin_bottom = 700.0

[node name="Panel" type="Panel" parent="."]
margin_left = 910.0
margin_top = 710.0
margin_right = 1030.0
margin_bottom = 830.0
rect_clip_content = true
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenPanelAnimation" type="AnimationPlayer" parent="Panel"]
anims/drawer_shown = SubResource( 12 )

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
margin_left = 20.0
margin_right = 464.0
margin_bottom = 128.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnVibrate" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
margin_right = 128.0
margin_bottom = 128.0
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 13 )
icon = ExtResource( 7 )
flat = true

[node name="BtnSound" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 128.0
custom_styles/hover = SubResource( 14 )
custom_styles/pressed = SubResource( 14 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 14 )
icon = ExtResource( 10 )
flat = true

[node name="BtnRAZ" type="Button" parent="Panel/MarginContainer/HBoxContainer"]
margin_left = 264.0
margin_right = 444.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RAZ"
flat = true

[node name="BtnOpenClose" type="Button" parent="."]
margin_left = 900.0
margin_top = 700.0
margin_right = 1040.0
margin_bottom = 840.0
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 8 )
custom_styles/normal = ExtResource( 8 )
icon = ExtResource( 11 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BtnStart" to="." method="_on_BtnStart_pressed"]
[connection signal="pressed" from="BtnCharacterSelection" to="." method="_on_Btn_Character_selection_pressed"]
[connection signal="item_selected" from="PopupPanel/CenterContainer/ItemList" to="." method="_on_ItemList_Character_selected"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/BtnVibrate" to="." method="_on_BtnVibrate_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/HBoxContainer/BtnRAZ" to="." method="_on_BtnRAZ_pressed"]
[connection signal="pressed" from="BtnOpenClose" to="." method="_on_BtnOpenClose_pressed"]
